--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <div class="container wrapper">
 
       <div class="menu dp-flex">
+        
         <div class="container dp-flex">
           <img src="media/images/logo.svg" alt="">
           <i class="icon-menu"></i>
@@ -43,6 +44,8 @@
             <li><a href="#">Account</a></li>
             <li><a href="#">View plans</a></li>
           </ul>
+          <img class="wave-deskop" src="media/images/bg-pattern-mobile-nav.svg" alt="waves">
+          
         </nav>
 
       </div>
@@ -50,8 +53,9 @@
     </div>
 
     <div class="banner">
-      <img src="media/images/bg-pattern-intro-right-desktop.svg" alt="waves">
+
       <div class="container wrapper ">
+        <img class="wave-desktop" src="media/images/bg-pattern-intro-right-desktop.svg" alt="waves">
         <div class="txt">
           <h1>
             Humanizing your insurance.
@@ -69,6 +73,9 @@
   </header>
 
   <section class="different">
+    <div class="wave-desktop">
+      <img src="media/images/bg-pattern-intro-left-desktop.svg" alt="waves">
+    </div>
   
     <div class="container wrapper">
 
@@ -107,7 +114,8 @@
 
   <section class="find">
     <div class="container wrapper dp-flex">
-      <img src="media/images/bg-pattern-how-we-work-desktop.svg" alt="waves">
+      <img class="wave-desktop" src="media/images/bg-pattern-how-we-work-desktop.svg" alt="waves">
+      <img class="wave-mobile" src="media/images/bg-pattern-how-we-work-mobile.svg" alt="">
       <h3>Find out more about how we work</h3>
       <a href="#"> How we work</a>
 
@@ -117,11 +125,15 @@
   </section>
 
   <footer>
+
     <div class="container wrapper">
-      <img src="media/images/bg-pattern-footer-desktop.svg" alt="waves">
+      <img class="waves-desktop" src="media/images/bg-pattern-footer-desktop.svg" alt="waves">
+      <img class="waves-mobile" src="media/images/bg-pattern-footer-mobile.svg" alt="waves">
+
       <div class="logo dp-flex">
 
         <img src="media/images/logo.svg" alt="logo">
+
         <div class="redes">
           <ul class="dp-flex">
             <li><a href="#"><i class="icon-facebook"></i></a></li>
