--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./media/images/favicon-32x32.png">
   <link rel="stylesheet" href="css/css.css">
   <link rel="stylesheet" href="css/fontello.css">
+  
 
   <title>Frontend Mentor | Insure landing page</title>
 
@@ -34,10 +35,10 @@
         
         <div class="container dp-flex">
           <img src="media/images/logo.svg" alt="">
-          <i class="icon-menu"></i>
+          <i class="icon-menu" id="btn"></i>
         </div>
 
-        <nav>
+        <nav id="menu">
           <ul class="dp-flex">
             <li><a href="#"> How we work</a></li>
             <li><a href="#">Blog</a></li>
@@ -61,6 +62,8 @@
           <img src="media/images/bg-pattern-intro-left-mobile.svg" alt="waves">
 
           <div class="main">
+
+            <hr>
 
             <h1>
               Humanizing your insurance.
@@ -93,7 +96,7 @@
     <div class="container wrapper">
 
 
-      <span></span>
+      <hr>
       <h2>We’re different </h2>
     <div class="main-txt dp-flex">
       <div class="txt">
@@ -218,6 +221,7 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Salvador Galvan Hernandez</a>.
   </div>
+  <script src="js/menu.js"></script>
 </body>
 
 </html>
